#3142 - swipe to delete fix no gap

--- a/packages/scandipwa/src/component/CartItem/CartItem.style.scss
+++ b/packages/scandipwa/src/component/CartItem/CartItem.style.scss
@@ -268,7 +268,6 @@
         font-weight: 600;
         color: var(--color-white);
         background-color: var(--swipe-to-delete-bg-color);
-        margin-inline-start: 16px;
     }
 
     .ProductPrice {
