--- a/packages/scandipwa/src/component/SwipeToDelete/SwipeToDelete.style.scss
+++ b/packages/scandipwa/src/component/SwipeToDelete/SwipeToDelete.style.scss
@@ -47,4 +47,9 @@
             margin-inline-start: 0;
         }
     }
+
+    &-SafeArea {
+        width: 16px;
+        height: 100%;
+    }
 }
